2003-07-01  Earnie Boyd  <earnie@users.sf.net>

	* include/basetyps.h (small, hyper): Change to __small and __hyper to
	avoid user namespace conflicts.

2003-07-01  Earnie Boyd  <earnie@users.sf.net>

	* include/w32api.h (_NT4, _W98, _WME, _NT5, _W2000, _WXP, _W2003,
	_IE3, _IE4, _IE5, _IE6): Add definitions.
	* include/winbase.h (GetLongPathName[AW]): Add guard for OS >= NT5 or
	>= Win98.
	Change existing guards to use the above macro names as appropriate.
	* include/basetyps.h (__int32, __int16, __int8, small, hyper): Define.
	Note: Also added to mingw/include/_mingw.h.

2003-06-28  Steven Edwards  <Steven_Ed4153@yahoo.com>

	* include/shlwapi.h (UrlGetLocationA, UrlGetLocationW,
	PathFindSuffixArrayA, PathFindSuffixArrayW,
	PathFindExtensionA, PathFindExtensionW, StrStrW
	StrStrA): Change unicode-macro'd LP[C]TSTR return values to
	explicit type.

2003-06-26  Mattia Barbon  <mbarbon@dsi.unive.it>

	* include/richedit.h (PARAFORMAT2): Add definition.
	* include/richedit.h (PFA_*, PFE_*, PFM_*): Add some
	missing constants.

2003-06-17  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/shellapi.h (SHQUERYRBINFO): Add structure,
	(SHQueryRecycleBin[AW]. SHEmptyRecycleBin[AW]):Add prototypes.
	(SHERB_NOCONFIRMATION, SHERB_NOPROGRESSUI, SHERB_NOSOUND):
	Add defines. Thanks to Brett Hart <brett at ncubedtech dot com>

2003-06-17  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (GlobalCompact, GlobalFix, GlobalFlags,
	GlobalUnfix, GlobalUnWire, GlobalWire, LocalCompact,
	LocalFlags, LocalShrink, LockSegment, UnlockSegment): Add comment
	that these are obsolete no-ops.

2003-06-17  Bang Jun-Young  <junyoung@netbsd.org>

	* include/winbase.h (GetProcessWorkingSetSize,
	GlobalCompact, LocalAlloc, LocalCompact, LocalReAlloc,
	LocalShrink, SignalObjectAndWait, WriteProcessMemory):
	Correct prototypes.

2003-06-18  Steven Edwards  <Steven_Ed4153@yahoo.com>

	* include/winuser.h (TPM_RECURSE): Add define.
