@@ -196,19 +196,19 @@ extern "C" {
 #endif
 #endif /* ifndef SNDMSG */
 
-#define CommDlg_OpenSave_GetSpec(d,s,m) (int)SNDMSG(d,CDM_GETSPEC,m,(LPARAM)s)
+#define CommDlg_OpenSave_GetSpec(d,s,m) ((int)SNDMSG((d),CDM_GETSPEC,(m),(LPARAM)(s)))
 #define CommDlg_OpenSave_GetSpecA CommDlg_OpenSave_GetSpec
 #define CommDlg_OpenSave_GetSpecW CommDlg_OpenSave_GetSpec
-#define CommDlg_OpenSave_GetFilePath(d,s,m) (int)SNDMSG(d,CDM_GETFILEPATH,m,(LPARAM)s)
+#define CommDlg_OpenSave_GetFilePath(d,s,m) ((int)SNDMSG((d),CDM_GETFILEPATH,(m),(LPARAM)(s)))
 #define CommDlg_OpenSave_GetFilePathA CommDlg_OpenSave_GetFilePath
 #define CommDlg_OpenSave_GetFilePathW CommDlg_OpenSave_GetFilePath
-#define CommDlg_OpenSave_GetFolderPath(d,s,m) (int)SNDMSG(d,CDM_GETFOLDERPATH,m,(LPARAM)(LPSTR)s)
+#define CommDlg_OpenSave_GetFolderPath(d,s,m) ((int)SNDMSG((d),CDM_GETFOLDERPATH,(m),(LPARAM)(LPSTR)(s)))
 #define CommDlg_OpenSave_GetFolderPathA CommDlg_OpenSave_GetFolderPath
 #define CommDlg_OpenSave_GetFolderPathW CommDlg_OpenSave_GetFolderPath
-#define CommDlg_OpenSave_GetFolderIDList(d,i,m) (int)SNDMSG(d,CDM_GETFOLDERIDLIST,m,(LPARAM)i)
-#define CommDlg_OpenSave_SetControlText(d,i,t) (void)SNDMSG(d,CDM_SETCONTROLTEXT,i,(LPARAM)t)
-#define CommDlg_OpenSave_HideControl(d,i) (void)SNDMSG(d,CDM_HIDECONTROL,i,0)
-#define CommDlg_OpenSave_SetDefExt(d,e) (void)SNDMSG(d,CDM_SETDEFEXT,0,(LPARAM)e)
+#define CommDlg_OpenSave_GetFolderIDList(d,i,m) ((int)SNDMSG((d),CDM_GETFOLDERIDLIST,(m),(LPARAM)(i)))
+#define CommDlg_OpenSave_SetControlText(d,i,t) ((void)SNDMSG((d),CDM_SETCONTROLTEXT,(i),(LPARAM)(t)))
+#define CommDlg_OpenSave_HideControl(d,i) ((void)SNDMSG((d),CDM_HIDECONTROL,(i),0))
+#define CommDlg_OpenSave_SetDefExt(d,e) ((void)SNDMSG((d),CDM_SETDEFEXT,0,(LPARAM)(e)))
 
 typedef UINT (APIENTRY *__CDHOOKPROC)(HWND,UINT,WPARAM,LPARAM);
 typedef __CDHOOKPROC LPCCHOOKPROC;
