@@ -1749,7 +1749,9 @@ extern "C" {
 #define TPM_BOTTOMALIGN 32
 #define TPM_NONOTIFY 128
 #define TPM_RETURNCMD 256
+#if (_WIN32_WINNT >= _NT5 || _WIN32_WINDOWS >= _W98)
 #define TPM_RECURSE 1
+#endif
 #define HELP_COMMAND 0x102
 #define HELP_CONTENTS 3
 #define HELP_CONTEXT 1
@@ -2001,6 +2003,12 @@ extern "C" {
 #define GA_PARENT 1
 #define GA_ROOT 2
 #define GA_ROOTOWNER 3
+#if (_WIN32_WINNT >= _NT5 || _WIN32_WINDOWS >= _W98)
+#define MONITOR_DEFAULTTONULL 0 
+#define MONITOR_DEFAULTTOPRIMARY 1 
+#define MONITOR_DEFAULTTONEAREST 2 
+#define MONITORINFOF_PRIMARY 1 
+#endif
 
 #ifndef RC_INVOKED
 typedef BOOL(CALLBACK *DLGPROC)(HWND,UINT,WPARAM,LPARAM);
